--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -3,15 +3,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/bootstrap.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
-    <script src="~/Scripts/bootstrap.js"></script>
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
+   
       <title>@ViewBag.Title</title>
 </head>
 <body>
@@ -55,11 +55,13 @@
 
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
                 <div class="list-group">
-                    <a href="@Url.Action("Index", "Methods")" class="list-group-item active">Методы</a>
-                    <a href="@Url.Action("Gaus", "Methods")" class="list-group-item">Метод Гаусса</a>
-                    <a href="@Url.Action("GCD", "Methods")" class="list-group-item">НОД</a>
-                    <a href="#" class="list-group-item">Link</a>
-                    <a href="#" class="list-group-item">Link</a>
+                    <a class="list-group-item active" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        <b>  МЧА </b>
+                    </a>
+                    <div class="collapse" id="collapseExample">
+                        <a href="@Url.Action("Gaus", "Methods")" class="list-group-item"><b>Метод Гаусса</b></a>
+                        <a href="@Url.Action("GCD", "Methods")" class="list-group-item">НОД</a>
+                    </div>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
@@ -68,6 +70,7 @@
                 </div>
             </div><!--/.sidebar-offcanvas-->
         </div><!--/row-->
+       
 
         <hr>
 
@@ -81,5 +84,9 @@
 </html>
 <script>
     $(".collapse").collapse()
+
+    $('#collapseExample').collapse({
+        toggle: false
+    })
 </script>
 
