--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                 @RenderBody()
             </div><!--/.col-xs-12.col-sm-9-->
 
-            <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+            @*<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
                 <div class="list-group">
                     <a class="list-group-item active" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <b>  МЧА </b>
@@ -68,7 +68,7 @@
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                 </div>
-            </div><!--/.sidebar-offcanvas-->
+            </div>*@<!--/.sidebar-offcanvas-->
         </div><!--/row-->
        
 
@@ -90,3 +90,4 @@
     })
 </script>
 
+         
