--- a/MathСalculator.WebUI/Views/Users/Login.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.cshtml
@@ -6,15 +6,13 @@
 
 @{Html.EnableClientValidation();}
 @{Html.EnableUnobtrusiveJavaScript();}
-<center>
+@*<center>
     
     <h2>Log in</h2>
     @using (@Html.BeginForm())
     {
         
-        <div class="text-error">
-            <b>@Html.ValidationSummary(true, "You have some problem: ")</b>
-        </div>
+        
         <div class="control-group">
             @Html.LabelFor(m => m.Login, new { @class = "control-label" })
             <div class="controls">
@@ -40,5 +38,52 @@
             </div>
         </div>
     }
-</center>
-
+</center>*@
+<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
+<br />
+<br />
+<br />
+<link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+<center>
+    <div class="container">
+        <div class="jumbotron" style="height:auto;min-height:300px;">
+            <div class="col-md-4">
+                <img src="http://bootdey.com/img/Content/Manbrown2.png" class="img-responsive center-block img-user">
+            </div>
+            <div class="col-md-6 form-content">
+       
+@using (@Html.BeginForm("Login","Users",FormMethod.Post, new { @class = "form-horizontal" }))
+    {
+                    <div class="form-group text-center">
+                        @*<div class="col-sm-10 reg-icon">
+                            <span class="fa fa-user fa-2x">Sign in</span>
+                        </div>*@
+                        <div class="text-error">
+                            <br />
+                            <b>@Html.ValidationSummary(true, "You have some problem: ")</b>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            @Html.TextBoxFor(m => m.Login, new {@class="form-control", @placeholder = "Login" })
+                            @Html.ValidationMessageFor(m => m.Password)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            @Html.PasswordFor(m => m.Password, new {@class="form-control" , @placeholder = "Password" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <button type="submit" class="btn btn-info">
+                                Sing in
+                            </button>
+                        </div>
+                    </div>
+}
+            </div>
+        </div>
+    </div>
+</center>                        
