--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
    
       <title>@ViewBag.Title</title>
@@ -31,13 +32,20 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li role="presentation"><a href="#">News <span class="badge">3</span></a></li>
+                    <li>
+                        
+                    </li>
                 </ul>
-                <div class="navbar-form pull-right">
-                    <span>
-                        @{Html.RenderAction("Account", "Users");}
-                    </span>
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>    
+                <div class="nav navbar-nav navbar-right">
+                       @{Html.RenderAction("Account", "Users");}
                 </div>
-            </div><!-- /.nav-collapse -->
+                </div><!-- /.nav-collapse -->
 
         </div><!-- /.container -->
     </nav><!-- /.navbar -->
@@ -53,7 +61,7 @@
                 @RenderBody()
             </div><!--/.col-xs-12.col-sm-9-->
 
-            @*<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+            <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
                 <div class="list-group">
                     <a class="list-group-item active" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                         <b>  МЧА </b>
@@ -68,12 +76,10 @@
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                 </div>
-            </div>*@<!--/.sidebar-offcanvas-->
-        </div><!--/row-->
+            </div>
+        </div>
        
-
-        <hr>
-
+     
         <footer>
             <p>&copy; Company 2014</p>
         </footer>
@@ -88,6 +94,6 @@
     $('#collapseExample').collapse({
         toggle: false
     })
+
 </script>
 
-         
