--- a/MathСalculator.WebUI/Views/Users/Login.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.cshtml
@@ -6,84 +6,70 @@
 
 @{Html.EnableClientValidation();}
 @{Html.EnableUnobtrusiveJavaScript();}
-@*<center>
-    
-    <h2>Log in</h2>
-    @using (@Html.BeginForm())
-    {
-        
-        
-        <div class="control-group">
-            @Html.LabelFor(m => m.Login, new { @class = "control-label" })
-            <div class="controls">
-                @Html.TextBoxFor(m => m.Login, new { @class = "control-label", @placeholder = "Login" })
-                <div class="text-error">
-                    <b> @Html.ValidationMessageFor(m => m.Login)</b>
-                </div>
-            </div>
-        </div>
 
-        <div class="control-group">
-            @Html.LabelFor(m => m.Password, new { @class = "control-label" })
-            <div class="controls">
-                @Html.PasswordFor(m => m.Password, new { @placeholder = "Password" })
-                <p class="text-error">
-                    <b>@Html.ValidationMessageFor(m => m.Password)</b>
-                </p>
-            </div>
-            <div class="control-group">
-                <div class="controls">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-            </div>
-        </div>
-    }
-</center>*@
-<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
-<br />
-<br />
-<br />
-<link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-<center>
-    <div class="container">
-        <div class="jumbotron" style="height:auto;min-height:300px;">
-            <div class="col-md-4">
-                <img src="http://bootdey.com/img/Content/Manbrown2.png" class="img-responsive center-block img-user">
-            </div>
-            <div class="col-md-6 form-content">
-       
-@using (@Html.BeginForm("Login","Users",FormMethod.Post, new { @class = "form-horizontal" }))
-    {
-                    <div class="form-group text-center">
-                        @*<div class="col-sm-10 reg-icon">
-                            <span class="fa fa-user fa-2x">Sign in</span>
-                        </div>*@
-                        <div class="text-error">
-                            <br />
-                            <b>@Html.ValidationSummary(true, "You have some problem: ")</b>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-10">
-                            @Html.TextBoxFor(m => m.Login, new {@class="form-control", @placeholder = "Login" })
-                            @Html.ValidationMessageFor(m => m.Password)
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-10">
-                            @Html.PasswordFor(m => m.Password, new {@class="form-control" , @placeholder = "Password" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-10">
-                            <button type="submit" class="btn btn-info">
-                                Sing in
-                            </button>
-                        </div>
-                    </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+         
+            <div class="account-wall">
+                <img class="profile-img" src="~/Content/avatar.jpg" />
+                 
+
+@using (@Html.BeginForm("Login", "Users", FormMethod.Post, new { @class = "form-signin", @role = "form" }))
+{
+
+   <p class="help-block">  @Html.ValidationSummary(true, "You have some problem: ") </p>
+    
+    <div class="form-group">
+         <div class="">
+             @Html.TextBoxFor(m => m.Login, new { @class = "form-control", @placeholder = "Login" })
+            <p class="help-block">@Html.ValidationMessageFor(m => m.Login)</p>
+         </div>
+      </div>
+    
+    <div class="form-group">
+         <div class="">
+             @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+             <p class="help-block">@Html.ValidationMessageFor(m => m.Password)</p>
+         </div>
+      </div>
+
+    <div class="form-group">
+         <div class="">
+
+             <button class="btn btn-lg btn-primary btn-block">
+                 Войти
+                 
+             </button>
+
+         </div>
+      </div>
 }
             </div>
+            <a href="#" class="text-center new-account">Создать новый аккаунт </a>
         </div>
     </div>
-</center>                        
+</div>
+
+
+<script>
+
+
+    $(function () {
+        $('.validation-summary-errors').each(function () {
+            $(this).addClass('alert');
+            $(this).addClass('alert-danger');
+        });
+
+        $('form').each(function () {
+            $(this).find('div.form-group').each(function () {
+                if ($(this).find('span.field-validation-error').length > 0) {
+                    $(this).addClass('has-error');
+                    $(this).find('span.field-validation-error').
+                       removeClass('field-validation-error');
+                }
+            });
+        });
+
+    });
+</script>
