--- a/MathСalculator.WebUI/Views/Users/Register.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Register.cshtml
@@ -9,9 +9,9 @@
     <h2>Sign up</h2>
     @{Html.EnableClientValidation();}
     @{Html.EnableUnobtrusiveJavaScript();}
-    <div class="container">
+    @*<div class="container">
         @using (Html.BeginForm("Register", "Users", new { ViewBag.ReturnUrl },
-        FormMethod.Post))
+        FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
     <form class="form-signin">
         <h2 class="form-signin-heading">Please sign in</h2>
@@ -58,11 +58,21 @@
             </div>
         </div>
 
+        <div class="control-group">
+            <label class="control-label">Choose image for your personal avatar</label>
+            <div class="controls">
+                <input type="file" name="Image" />
+            </div>
+        </div>
+
         <div>
             <input type="submit" class="btn btn-primary" value="Submit" />
         </div>
     </form>
 }
-        </div>
+        </div>*@
+
+
 
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+
