--- a/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
@@ -16,7 +16,25 @@
     </p>
     <p>Хотя в настоящее время данный метод повсеместно называется методом Гаусса, он был известен и до К. Ф. Гаусса. Первое известное описание данного метода — в китайском трактате «Математика в девяти книгах».</p>
 </div>
-<br />
+<br/>
+
+<div>
+    <b>Описание метода</b>
+    <p>
+        Пусть исходная система выглядит следующим образом
+        <br/>
+
+        <img src="http://upload.wikimedia.org/math/8/0/4/804d4d8007c48c6a0f855cd664d34edb.png"/>
+
+        Матрица <b>A </b> называется основной матрицей системы, <b>b </b> — столбцом свободных членов.
+        <br/>
+    </p>
+    <p>
+        Тогда, согласно свойству элементарных преобразований над строками, основную матрицу этой системы можно привести к ступенчатому виду (эти же преобразования нужно применять к столбцу свободных членов):
+
+        <img src="http://upload.wikimedia.org/math/b/c/2/bc2b83ab783eda5084f70dd36855d3cb.png"/>
+    </p>
+</div>
 @if (ViewBag.flag1 == true)
 {
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
