add view simpleiteration

--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li role="presentation"><a href="#">News <span class="badge">3</span></a></li>
+                    <li role="presentation"><a href="@Url.Action("List", "Post")">News <span class="badge">3</span></a></li>
                     <li>
                         
                     </li>
@@ -79,13 +79,14 @@
             </div>*@
         </div>
        
-     
-        <footer>
-            <p>&copy; Company 2014</p>
-        </footer>
-
+    
+   
     </div><!--/.container-->
-
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">Place sticky footer content here.</p>
+        </div>
+    </footer>
 </body>
 </html>
 <script>
