--- a/MathСalculator.WebUI/Views/Users/Register.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Register.cshtml
@@ -9,7 +9,7 @@
     <h2>Sign up</h2>
     @{Html.EnableClientValidation();}
     @{Html.EnableUnobtrusiveJavaScript();}
-    @*<div class="container">
+    <div class="container">
         @using (Html.BeginForm("Register", "Users", new { ViewBag.ReturnUrl },
         FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal" }))
 {
@@ -70,7 +70,8 @@
         </div>
     </form>
 }
-        </div>*@
+        </div>
+
 
 
 
