--- a/MathСalculator.WebUI/Views/Methods/Index.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Index.cshtml
@@ -4,41 +4,116 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <p>тут тип инфа</p>
-</div>
+
+
+@*<div class="jumbotron">
+    <h1>Marketing stuff!</h1>
+    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
+    <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+</div>*@
+
+
+    <!-- Carousel -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="~/Content/barcelona-boardwalk.jpg" alt="First slide">
+                <!-- Static Header -->
+                <div class="header-text hidden-xs">
+                    <div class="col-md-12 text-center">
+                        <h2>
+                            <span>Добро пожаловать на <strong>MATH CALCULATOR</strong></span>
+                        </h2>
+                        <br>
+                        <h3>
+                            <span>Пожалуйста войдите в свою учётную запись или зарегистрируйтесь</span>
+                        </h3>
+                        <br>
+                        <div class="">
+                            <a class="btn btn-theme btn-sm btn-min-block" href="@Url.Action("Login", "Users")">Войти</a><a class="btn btn-theme btn-sm btn-min-block" href="@Url.Action("Register", "Users")">Регистрация</a>
+                        </div>
+                    </div>
+                </div><!-- /header-text -->
+            </div>
+          
+            <div class="item">
+                <img src="~/Content/ilovemaths.jpg" alt="Second slide">
+                <!-- Static Header -->
+                <div class="header-text hidden-xs">
+                    <div class="col-md-12 text-center">
+                       
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                      
+                    </div>
+
+                </div><!-- /header-text -->
+            </div>
+        
+            <div class="item">
+                <img src="~/Content/imafe3.jpg" alt="Third slide">
+                <!-- Static Header -->
+                <div class="header-text hidden-xs">
+                    <div class="col-md-12 text-center">
+                        <br/>
+                        <br/>
+                        <h2>
+                            <span><strong>МЕТОД ГАУССА</strong></span>
+                        </h2>
+                        <br>
+                        <br>
+                        <h3>
+                            <span>С помощью нашего сервиса вы научитесь решать СЛАУ методом Гаусса и другими</span>
+                        </h3>
+                       
+                        <br>
+                        <br>
+                        <div class="">
+                            <a class="btn btn-primary" href="@Url.Action("Gaus", "Methods")">Подробнее</a>
+                        </div>
+                    </div>
+                    
+                </div><!-- /header-text -->
+              
+            </div>
+
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div><!-- /carousel -->
+
+
+<!-- Example row of columns -->
 <div class="row">
-    <div class="col-xs-6 col-lg-4">
-        <h2>НОД</h2>
-        <p>Наибольшим общим делителем (НОД) для двух целых чисел m и n называется наибольший из их общих делителей.Наибольший общий делитель существует и однозначно определён, если хотя бы одно из чисел m или n не равно нулю. </p>
-        <p><a href="@Url.Action("GCD", "Methods")" class="btn btn-default " role="button">Подробнее &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-        <h2>Гаус</h2>
-        <p>Классический метод решения системы линейных алгебраических уравнений (СЛАУ). </p>
-        <p><a class="btn btn-default" href="@Url.Action("Gaus", "Methods")" role="button">Подробнее &raquo;</a></p>
+    <div class="col-lg-4">
+        <h2>Онлайн-калькулятор</h2>
+       <p>Math - отличный онлайн-калькулятор с негораниченными возможностями. С помощью данного калькулятора можно находить производные, пределы и т.д </p>
+        <p><a class="btn btn-primary" href="@Url.Action("MathCalc", "Methods")" role="button">Подробнее &raquo;</a></p>
+    </div>
+    <div class="col-lg-4">
+        <h2>Метод простой итерации</h2>
+        <p>Один из простейших численных методов  решения уравнений . Метод основан на принципе сжимающего отображения , который применительно к численным методам в общем виде также может называться методом простой итерации или методом последовательных приближений</p>
+        <p><a class="btn btn-primary" href="@Url.Action("SimpleIteration", "Methods")" role="button">Подробнее &raquo;</a></p>
+    </div>
 
+    <div class=" col-lg-4">
+        <h2>Метод Ньютона</h2>
+        <p>Метод Ньютона — это итерационный численный метод нахождения корня (нуля) заданной функции.Поиск решения осуществляется путём построения последовательных приближений и основан на принципах простой итерации.</p>
+        <p><a href="@Url.Action("Newton", "Methods")" class="btn btn-primary" role="button">Подробнее &raquo;</a></p>
     </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-        <h2>SimpleIteration</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="@Url.Action("SimpleIteration", "Methods")" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-
-</div><!--/row-->
+</div>
