--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -19,29 +19,77 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+             
                 <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li role="presentation"><a href="@Url.Action("List", "Post")">News <span class="badge">3</span></a></li>
-                    <li>
-                        
+                    <li ><a href="@Url.Action("Index", "Methods")">Главная</a></li>
+                  
+                    <li class="dropdown dropdown-large">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
+
+                        <ul class="dropdown-menu dropdown-menu-large row">
+                            <li class="col-sm-3">
+                                <ul>
+                                    <li class="dropdown-header">Методы решения СЛАУ</li>
+                                    <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
+                                    <li><a href="#">LU - разложение</a></li>
+                                    <li><a href="#">Метод квадратного корня</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Итерационные методы</li>
+                                    <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
+                                    <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
+                                    <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
+                                    <li><a href="@Url.Action("Secants", "Methods")">Метод сукущих</a></li>
+                            
+                                </ul>
+                            </li>
+                            <li class="col-sm-3">
+                                <ul>
+                                    <li class="dropdown-header">Численное интегрирование</li>
+                                    <li><a href="@Url.Action("MathCalc", "Methods")">Метод прямоугольников</a></li>
+                                    <li><a href="#">Метод трапеций</a></li>
+                                    <li><a href="#">Метод парабол (метод Симпсона)</a></li>
+                                    <li><a href="#">Метод 3/8</a></li>
+
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Онлайн сервисы</li>
+                                    <li><a href="@Url.Action("MathCalc", "Methods")">Калькулятор</a></li>
+                                </ul>
+                            </li>
+                            <li class="col-sm-3">
+                                <ul>
+                                    <li class="dropdown-header">Input groups</li>
+                                    <li><a href="#">Basic example</a></li>
+                                    <li><a href="#">Sizing</a></li>
+                                    <li><a href="#">Checkboxes and radio addons</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Navs</li>
+                                    <li><a href="#">Tabs</a></li>
+                                    <li><a href="#">Pills</a></li>
+                                    <li><a href="#">Justified</a></li>
+                                </ul>
+                            </li>
+                            <li class="col-sm-3">
+                                <ul>
+                                    <li class="dropdown-header">Navbar</li>
+                                    <li><a href="#">Default navbar</a></li>
+                                    <li><a href="#">Buttons</a></li>
+                                    <li><a href="#">Text</a></li>
+                                    <li><a href="#">Non-nav links</a></li>
+                                    <li><a href="#">Component alignment</a></li>
+                                    <li><a href="#">Fixed to top</a></li>
+                                    <li><a href="#">Fixed to bottom</a></li>
+                                    <li><a href="#">Static top</a></li>
+                                    <li><a href="#">Inverted navbar</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>    
+ 
                 <div class="nav navbar-nav navbar-right">
                        @{Html.RenderAction("Account", "Users");}
                 </div>
@@ -52,14 +100,8 @@
 
     <div class="container">
 
-        <div class="row row-offcanvas row-offcanvas-right">
-
-            <div class="col-xs-12 col-sm-9">
-                <p class="pull-right visible-xs">
-                    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-                </p>
                 @RenderBody()
-            </div><!--/.col-xs-12.col-sm-9-->
+            @*</div>*@<!--/.col-xs-12.col-sm-9-->
 
             @*<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
                 <div class="list-group">
@@ -70,15 +112,14 @@
                         <a href="@Url.Action("Gaus", "Methods")" class="list-group-item"><b>Метод Гаусса</b></a>
                         <a href="@Url.Action("GCD", "Methods")" class="list-group-item">НОД</a>
                     </div>
-                    <a href="#" class="list-group-item">Link</a>
+                    <a href="@Url.Action("MathCalc", "Methods")" class="list-group-item">Калькулятор Онлайн</a>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                     <a href="#" class="list-group-item">Link</a>
                 </div>
             </div>*@
-        </div>
-       
+        
     
    
     </div><!--/.container-->
@@ -92,9 +133,7 @@
 <script>
     $(".collapse").collapse()
 
-    $('#collapseExample').collapse({
-        toggle: false
-    })
+    $('#collapseExample').collapse()
 
 </script>
 
