--- a/MathСalculator.WebUI/Views/Users/Register.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Register.cshtml
@@ -61,19 +61,227 @@
         <div class="control-group">
             <label class="control-label">Choose image for your personal avatar</label>
             <div class="controls">
-                <input type="file" name="Image" />
+                <input type="file" name="Image"/>
             </div>
         </div>
 
         <div>
-            <input type="submit" class="btn btn-primary" value="Submit" />
+            <input type="submit" class="btn btn-primary" value="Submit"/>
         </div>
     </form>
 }
+</div>
+
+
+
+<div class="container">
+    <div class="row text-center pad-top ">
+        <div class="col-md-12">
+            <h2>Bootstrap Registration Page</h2>
+        </div>
+    </div>
+    <div class="row  pad-top">
+
+        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <strong>   Register Yourself </strong>
+                </div>
+                <div class="panel-body">
+                    @using (Html.BeginForm("Register", "Users", new {ViewBag.ReturnUrl},
+                        FormMethod.Post, new {enctype = "multipart/form-data", @class = "form-horizontal"}))
+                    {
+                        <b>@Html.ValidationSummary(true, "Failed to create an account. Please correct errors and try again.")</b>
+                        <br/>
+                        <div class="form-group input-group">
+                            <span class="input-group-addon"><i class="fa fa-circle-o-notch"></i></span>
+                            @Html.TextBoxFor(m => m.Login, new {@placeholder = "Login", @class = "form-control"})
+
+                        </div>
+                        <div class="input-group">
+                            <span class="glyphicon glyphicon-user" id="sizing-addon2"></span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon2">
+</div>
+                        <div class="form-group input-group">
+                            <span class="input-group-addon"><i class="fa fa-tag"></i></span>
+                            <input type="text" class="form-control" placeholder="Desired Username"/>
+                        </div>
+                        <div class="form-group input-group">
+                            <span class="glyphicon glyphicon-lock"> </span>
+                            <input type="text" class="form-control" placeholder="Your Email"/>
+                        </div>
+                        <div class="form-group input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                            <input type="password" class="form-control" placeholder="Enter Password"/>
+                        </div>
+                        <div class="form-group input-group">
+                            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                            <input type="password" class="form-control" placeholder="Retype Password"/>
+                        </div>
+                    <input type="submit" class="btn btn-primary" value="Submit"/>
+                   
+                    }
+                </div>
+
+            </div>
         </div>
 
 
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="span8">
+            <form class="form-horizontal" id="registerHere" method='post' action=''>
+                <fieldset>
+
+                    <legend>Registration</legend>
+
+                    <div class="control-group">
+                        <label class="control-label">Name</label>
+                        <div class="controls">
+                            <input type="text" class="input-xlarge" id="user_name" name="user_name" rel="popover" data-content="Enter your first and last name." data-original-title="Full Name">
+                        </div>
+                    </div>
 
 
+                    <div class="control-group">
+                        <label class="control-label">Email</label>
+                        <div class="controls">
+                            <input type="text" class="input-xlarge" id="user_email" name="user_email" rel="popover" data-content="What’s your email address?" data-original-title="Email">
+                        </div>
+                    </div>
+
+                    .............
+                    .............
+
+                    <div class="control-group">
+                        <label class="control-label"></label>
+                        <div class="controls">
+                            <button type="submit" class="btn btn-success">Create My Account</button>
+                        </div>
+                    </div>
+
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
 
+
+<div class="container" style="margin: 10px;">
+    <div class="row">
+        <h2>New Registration</h2>
+    </div>
+
+    <form role="form">
+        <div class="form-group">
+            <label for="firstname" class="col-md-2">
+                First Name:
+            </label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" id="firstname" placeholder="Enter First Name">
+            </div><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="lastname" class="col-md-2">
+                Last Name:
+            </label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" id="lastname" placeholder="Enter Last Name">
+            </div><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="emailaddress" class="col-md-2">
+                Email address:
+            </label>
+            <div class="col-md-10">
+                <input type="email" class="form-control" id="emailaddress" placeholder="Enter email address">
+                <p class="help-block">
+                    Example: yourname@domain.com
+                </p>
+            </div><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="password" class="col-md-2">
+                Password:
+            </label>
+            <div class="col-md-10">
+                <input type="password" class="form-control" id="password" placeholder="Enter Password">
+                <p class="help-block">
+                    Min: 6 characters (Alphanumeric only)
+                </p>
+            </div><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="sex" class="col-md-2">
+                Sex:
+            </label>
+            <div class="col-md-10">
+                <label class="radio">
+                    <input type="radio" name="sex" id="sex" value="male" checked>
+                    Male
+                </label>
+                <label class="radio">
+                    <input type="radio" name="sex" id="sex" value="female">
+                    Female
+                </label>
+            </div><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="country" class="col-md-2">
+                Country:
+            </label>
+            <div class="col-md-10">
+                <select name="country" id="country" class="form-control">
+                    <option>--Please Select--</option>
+                    <option>Беларусь</option>
+                    <option>Россия</option>
+                    <option>Canada</option>
+                    <option>United Kingdom</option>
+                    <option>Others</option>
+                </select>
+            </div><br /><br /><br /><br />
+        </div>
+
+        <div class="form-group">
+            <label for="uploadimage" class="col-md-2">
+                Upload Image:
+            </label>
+            <div class="col-md-10">
+                <input type="file" name="uploadimage" id="uploadimage">
+                <p class="help-block">
+                    Allowed formats: jpeg, jpg, gif, png
+                </p>
+            </div><br /><br />
+        </div>
+
+        <div class="checkbox">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-10">
+                <label>
+                    <input type="checkbox">Terms and Conditions
+                </label>
+            </div><br /><br />
+        </div>
+
+        <div class="row">
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-10">
+                <button type="submit" class="btn btn-info">
+                    Register
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
