--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/bootstrap.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
@@ -12,8 +13,7 @@
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
     <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
-   
-      <title>@ViewBag.Title</title>
+
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -29,8 +29,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li ><a href="@Url.Action("Index", "Methods")">Главная</a></li>
-                  
+                    <li><a href="@Url.Action("Index", "Methods")">Главная</a></li>
+
                     <li class="dropdown dropdown-large">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
 
@@ -47,7 +47,7 @@
                                     <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
                                     <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
                                     <li><a href="@Url.Action("Secants", "Methods")">Метод сукущих</a></li>
-                            
+
                                 </ul>
                             </li>
                             <li class="col-sm-3">
@@ -94,25 +94,21 @@
 
                     </li>
                 </ul>
- 
-                <div class="nav navbar-nav navbar-right">
-                       @{Html.RenderAction("Account", "Users");}
-                </div>
-                </div><!-- /.nav-collapse -->
+
+      
+            </div><!-- /.nav-collapse -->
 
         </div><!-- /.container -->
     </nav><!-- /.navbar -->
 
     <div class="container">
 
-                @RenderBody()
-     
-    
-   
+        @RenderBody()
+       
     </div><!--/.container-->
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">Данный сайт находится в разработке.Все пожелания Вы можете мне присылать на <a href="mailto:#">mik.borischewskij@gmail.com</a></p>
+            <p class="text-muted"> <p class="text-muted">Данный сайт находится в разработке.Все пожелания Вы можете мне присылать на <a href="mailto:#">mik.borischewskij@gmail.com</a></p></p>
         </div>
     </footer>
 </body>
@@ -123,4 +119,3 @@
     $('#collapseExample').collapse()
 
 </script>
-
