--- a/MathСalculator.WebUI/Views/Methods/Index.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Index.cshtml
@@ -18,18 +18,19 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="http://freewallpapers4desktop.com/wallpapers/maths-1280x800.jpg" alt="First slide">
+            <img src="~/Content/maths-1280x800.jpg" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Добро пожаловаать на MathCalculator</h1>
+                    <h1>Добро пожаловать на MathCalculator</h1>
                     <p>Пожалуйста войдите в свою учётную запись либо зарегистрируйтесь</p>
                     <p><a class="btn btn-lg btn-primary" href="@Url.Action("Login", "Users")" role="button">Войти</a>
                         <a class="btn btn-lg btn-primary" href="@Url.Action("Register", "Users")" role="button">Регистрация</a></p>
                 </div>
             </div>
         </div>
+      
         <div class="item">
-            <img src="http://www.fondosni.com/images/2013-03-28/I%20love%20math-762627.png" alt="Second slide">
+            <img src="~/Content/I%20love%20math-762627.png" alt="Second slide">
             <div class="container">
                 <div class="carousel-caption">
                     <a href="@Url.Action("Chord", "Methods")">Особенно когда можно решить уравнение f(x) = 0 методом хорд онлайн:))</a></p>
@@ -37,10 +38,9 @@
                 </div>
             </div>
         </div>
-       
 
         <div class="item">
-            <img src="http://img.mota.ru/upload/wallpapers/2013/06/12/10/03/36179/ZvqE2wp2kw-1680x1050.jpg" alt="Third slide">
+            <img src="~/Content/ZvqE2wp2kw-1680x1050.jpg" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
                             <h1>Не нужно усложнять!!!</h1>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="item">
-            <img src=" http://www.dcicomp.com/school-newsletter-ideas-for-parents-716.jpg" alt="Third slide">
+            <img src="~/Content/school-newsletter-ideas-for-parents-716.jpg" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
                     <h1>Вы ещё считаете производные и интегралы вручную?!!!</h1>
