--- a/MathСalculator.WebUI/Views/Methods/MathCalc.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/MathCalc.cshtml
@@ -6,8 +6,9 @@
 
 <center>
     <h1>Онлайн калькулятор Math</h1>
-    <br />
-    <div>
+    <br/>
+
+    <div class="container">
         <iframe width="590" height="390" src="http://ru.web2.0calc.com/widgets/horizontal/" scrolling="no" style="border: 1px solid # silver;"></iframe>
         <br />
 
