--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -46,7 +46,7 @@
                                     <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
                                     <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
                                     <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
-                                    <li><a href="@Url.Action("Secants", "Methods")">Метод сукущих</a></li>
+                                    <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
 
                                 </ul>
                             </li>
