--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -3,10 +3,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/simIter.js"></script>
+    <link href="~/Content/simIter.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+    <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
@@ -25,7 +30,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator</a>
+                <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator
+                </a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -46,7 +52,7 @@
                                     <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
                                     <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
                                     <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
-                                    <li><a href="@Url.Action("Secants", "Methods")">Метод сукущих</a></li>
+                                    <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
                             
                                 </ul>
                             </li>
@@ -117,10 +123,10 @@
     </footer>
 </body>
 </html>
-<script>
+@*<script>
     $(".collapse").collapse()
 
     $('#collapseExample').collapse()
 
-</script>
+</script>*@
 
